@@ -664,7 +664,10 @@ class ClientStorage(object):
     def _handle_extensions(self):
         for name in self.getExtensionMethods().keys():
             if not hasattr(self, name):
-                setattr(self, name, self._server.extensionMethod(name))
+                def mklambda(mname):
+                    return (lambda *args, **kw:
+                            self._server.rpc.call(mname, *args, **kw))
+                setattr(self, name, mklambda(name))
 
     def set_server_addr(self, addr):
         # Normalize server address and convert to string
